# wgman

./: .gitignore  Cargo.toml  Dockerfile  deploy_postgres.sh  deploy_wgman_debian.sh  run_tests.sh
migrations/: V1_interface.sql  V1_user.sql  V2_interface_password.sql  V2_peer_relation.sql  V2_user_password.sql  V3_add_admin.sql
src/: lib.rs
