[package]
name = "wgman"
version = "0.1.0"
authors = ["ashley"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
sqlx = { git = "https://github.com/launchbadge/sqlx.git", features = [ "runtime-tokio-rustls", "uuid", "ipnetwork", "postgres" ] }
uuid = "0.8"
ipnetwork = "0.17.0"
wgman-core = { path = "../wgman-core" }
