[package]
name = "wgman"
version = "0.1.1"
authors = ["Ashley Wulber"]
repository = "https://github.com/wash2/wgman-core.git"
edition = "2018"
license = "Apache-2.0"
description = "simple wireguard configuration management"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "1.0", features = ["full"] }
tokio = { version = "0.2", features = ["full"] }
# warp = "0.3"
warp = "0.2"
# sqlx = { git = "https://github.com/launchbadge/sqlx.git", features = [ "runtime-tokio-rustls", "uuid", "ipnetwork", "postgres" ] }
sqlx = { version = "0.4", features = [ "runtime-tokio-rustls", "uuid", "ipnetwork", "postgres" ] }
uuid = "0.8"
ipnetwork = "0.17.0"
# wgman-core = { path = "../wgman-core" }
wgman-core = "0.1"