[package]
name = "wgman"
version = "0.6.0"
authors = ["Ashley Wulber"]
repository = "https://github.com/wash2/wgman-core.git"
edition = "2018"
license = "Apache-2.0"
description = "simple wireguard configuration management"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "uuid", "ipnetwork", "postgres" ] }
ipnetwork = "0.17"
wgman-core = { path = "../wgman-core" }
# wgman-core = "0.6"
serde = "1"
futures = "0.3"

[dev-dependencies]
futures = "0.3"
